# codex-mimo-adapter

./: .codex-mimo-adapter.env  .env.example  .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  README.zh-CN.md  config.toml.example  pyproject.toml
.codex-opencode/: state.sqlite
.codex/agents/: default.toml  (+14 more)
.mimocode/: .cron-lock
codex_opencode_adapter/: config.py  protocol.py  server.py  state.py
codex_opencode_adapter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: COMPATIBILITY.md  DIAGNOSTICS.md  INDEX.md  PORTABLE.md  PORTABLE.zh-CN.md  REAL_VALIDATION_2026-06-25.zh-CN.md  ROADMAP.md  USAGE.zh-CN.md  VALIDATION.zh-CN.md  codex-opencode-adapter-handoff-todolist.md
launcher/: CodexMiMoLauncher.csproj  LauncherForm.cs  Program.cs  README.md  SecretStore.cs  app.manifest
scripts/: check-local-adapter.ps1  clear-state.ps1  dev-run.ps1  install-user-provider.ps1  package-portable.ps1  run-real-smoke.ps1  stage-runtime-windows.ps1  start-portable.ps1
src/: cli.rs  config.rs  init.rs  lib.rs  main.rs  media_guard.rs  project.rs  server.rs  state.rs  upstream.rs
tests/: cli_distribution_flow.rs  codex_chat_history_hardening.rs  concurrency_limit_regression.rs  conversion_rs.rs  e2e_basic.rs  e2e_errors.rs  e2e_multi_project.rs  e2e_reasoning.rs  e2e_tool_call.rs  e2e_validation.rs  multimodal_regression.rs  nonstream_upstream_error_regression.rs  reasoning_block_regression.rs  regression_conversion.rs  state_store.rs  stateless_tool_continuation.rs  stream_content_tool_buffer.rs  stream_tool_delta_regression.rs  test_adapter.py  test_conversion_modules.py  test_e2e.rs  test_models.py  test_protocol.py  test_server.py  test_upstream.py  tool_call_adoption.rs  tool_search_regression.rs
(+36 files in other folders)
