[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-opencode-adapter"
version = "0.1.0"
description = "Thin OpenAI Responses API adapter for OpenCode Go"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
codex-opencode-adapter = "codex_opencode_adapter.server:main"

[tool.setuptools.packages.find]
include = ["codex_opencode_adapter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

